Chuẩn hóa lại code cho đúng mô hình View - Controller - Service - DAO