@@ -1,18 +1,24 @@
 package stnw.service.impl;
 
-import stnw.config.JpaUtil;
+import stnw.dao.CategoryDao;
+import stnw.dao.OrderDao;
 import stnw.dao.ProductDao;
 import stnw.dao.ProductSizeDao;
+import stnw.dao.ReviewDao;
+import stnw.dao.WishlistDao;
+import stnw.dao.impl.CategoryDaoImpl;
+import stnw.dao.impl.OrderDaoImpl;
 import stnw.dao.impl.ProductDaoImpl;
 import stnw.dao.impl.ProductSizeDaoImpl;
-import jakarta.persistence.EntityManager;
+import stnw.dao.impl.ReviewDaoImpl;
+import stnw.dao.impl.WishlistDaoImpl;
 import jakarta.servlet.http.Part;
 import stnw.model.Category;
 import stnw.model.Product;
 import stnw.model.ProductSize;
 import stnw.service.AdminProductService;
 import stnw.utils.UploadType;
-import stnw.utils.UploadUtil;
+import stnw.utils.UploadUtils;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
@@ -21,6 +27,11 @@ import java.util.*;
 public class AdminProductServiceImpl implements AdminProductService {
     
     private final ProductDao productDao = new ProductDaoImpl();
+    private final CategoryDao categoryDao = new CategoryDaoImpl();
+    private final OrderDao orderDao = new OrderDaoImpl();
+    private final ReviewDao reviewDao = new ReviewDaoImpl();
+    private final WishlistDao wishlistDao = new WishlistDaoImpl();
+    private final ProductSizeDao productSizeDao = new ProductSizeDaoImpl();
     
     // Constants cho giá size mặc định (không hard-code trong logic)
     private static final BigDecimal SIZE_S_PRICE = BigDecimal.ZERO; // +0 VND
@@ -29,7 +40,7 @@ public class AdminProductServiceImpl implements AdminProductService {
     
     @Override
     public List<Product> getAllProducts() {
-        return productDao.findAll(-1, -1); // Lấy tất c�?
+        return productDao.findAll(-1, -1); // Lấy tất cả
     }
     
     @Override
@@ -42,7 +53,7 @@ public class AdminProductServiceImpl implements AdminProductService {
         // 1. VALIDATION
         validateProduct(product);
         
-        // 2. X�?LÝ ẢNH
+        // 2. XỬ LÝ ẢNH
         String finalThumbnail = handleThumbnailUpload(product, thumbnailFile, thumbnailUrl, servletContext);
         if (finalThumbnail != null) {
             product.setThumbnail(finalThumbnail);
@@ -57,7 +68,7 @@ public class AdminProductServiceImpl implements AdminProductService {
         // 4. LƯU VÀO DB
         productDao.save(product);
         
-        // 5. Nếu là sản phẩm thức uống mới tạo, t�?động tạo sizes S/M/L
+        // 5. Nếu là sản phẩm thức uống mới tạo, tự động tạo sizes S/M/L
         if (product.getProduct_id() != null && product.getCategory() != null && 
             Boolean.TRUE.equals(product.getCategory().getIsDrink())) {
             createDefaultSizesForDrink(product.getProduct_id());
@@ -65,21 +76,18 @@ public class AdminProductServiceImpl implements AdminProductService {
     }
     
     /**
-     * T�?động tạo sizes mặc định (S/M/L) cho sản phẩm thức uống
+     * Tự động tạo sizes mặc định (S/M/L) cho sản phẩm thức uống
      */
     private void createDefaultSizesForDrink(int productId) {
-        EntityManager em = JpaUtil.em();
         try {
-            ProductSizeDao sizeDao = new ProductSizeDaoImpl(em);
-            
             // Kiểm tra xem đã có sizes chưa
-            List<ProductSize> existingSizes = sizeDao.findByProductId(productId);
+            List<ProductSize> existingSizes = productSizeDao.findByProductId(productId);
             if (!existingSizes.isEmpty()) {
                 // Đã có sizes rồi, không tạo lại
                 return;
             }
             
-            // Lấy product đ�?set vào size
+            // Lấy product để set vào size
             Product product = productDao.findById(productId);
             if (product == null) {
                 return;
@@ -90,28 +98,25 @@ public class AdminProductServiceImpl implements AdminProductService {
             sizeS.setSize_name("S");
             sizeS.setPrice_adjustment(SIZE_S_PRICE);
             sizeS.setProduct(product);
-            sizeDao.save(sizeS);
+            productSizeDao.save(sizeS);
             
             // Tạo Size M
             ProductSize sizeM = new ProductSize();
             sizeM.setSize_name("M");
             sizeM.setPrice_adjustment(SIZE_M_PRICE);
             sizeM.setProduct(product);
-            sizeDao.save(sizeM);
+            productSizeDao.save(sizeM);
             
             // Tạo Size L
             ProductSize sizeL = new ProductSize();
             sizeL.setSize_name("L");
             sizeL.setPrice_adjustment(SIZE_L_PRICE);
             sizeL.setProduct(product);
-            sizeDao.save(sizeL);
-            
+            productSizeDao.save(sizeL);
         } catch (Exception e) {
             // Log lỗi nhưng không throw exception (tạo size không quan trọng bằng việc lưu product)
-            System.err.println("Không th�?tạo sizes mặc định cho sản phẩm #" + productId + ": " + e.getMessage());
+            System.err.println("Không thể tạo sizes mặc định cho sản phẩm #" + productId + ": " + e.getMessage());
             e.printStackTrace();
-        } finally {
-            em.close();
         }
     }
     
@@ -138,16 +143,11 @@ public class AdminProductServiceImpl implements AdminProductService {
         product.setDiscount(discount != null ? discount : BigDecimal.ZERO);
         
         // Category
-        EntityManager em = JpaUtil.em();
-        try {
-            Category category = em.find(Category.class, categoryId);
-            if (category == null) {
-                throw new IllegalArgumentException("Danh mục không tồn tại!");
-            }
-            product.setCategory(category);
-        } finally {
-            em.close();
+        Category category = categoryDao.findById(categoryId);
+        if (category == null) {
+            throw new IllegalArgumentException("Danh mục không tồn tại!");
         }
+        product.setCategory(category);
         
         product.setIsActive(isActive);
         product.setIsFeatured(isFeatured);
@@ -162,7 +162,6 @@ public class AdminProductServiceImpl implements AdminProductService {
         if (p == null) {
             throw new IllegalArgumentException("Sản phẩm không tồn tại!");
         }
-        
         // Ngừng bán: set isActive = false
         p.setIsActive(false);
         p.setUpdatedDate(LocalDateTime.now());
@@ -175,7 +174,6 @@ public class AdminProductServiceImpl implements AdminProductService {
         if (p == null) {
             throw new IllegalArgumentException("Sản phẩm không tồn tại!");
         }
-        
         // Kích hoạt: set isActive = true
         p.setIsActive(true);
         p.setUpdatedDate(LocalDateTime.now());
@@ -184,130 +182,79 @@ public class AdminProductServiceImpl implements AdminProductService {
     
     @Override
     public void deleteProduct(int id, jakarta.servlet.ServletContext servletContext) {
-        EntityManager em = JpaUtil.em();
-        try {
-            em.getTransaction().begin();
-            
-            Product p = em.find(Product.class, id);
-            if (p == null) {
-                em.getTransaction().rollback();
-                throw new IllegalArgumentException("Sản phẩm không tồn tại!");
-            }
-            
-            // Kiểm tra sản phẩm đã có đơn hàng chưa
-            Long orderCount = em.createQuery(
-                "SELECT COUNT(od) FROM OrderDetail od WHERE od.product.product_id = :productId",
-                Long.class
-            ).setParameter("productId", id).getSingleResult();
-            
-            if (orderCount > 0) {
-                em.getTransaction().rollback();
-                throw new IllegalArgumentException("Sản phẩm đã có đơn hàng, không th�?xóa vĩnh viễn. Vui lòng dùng chức năng 'Ngừng bán'.");
-            }
-            
-            // Xóa các bảng con trước (vì không có CASCADE)
-            // 1. Xóa Review
-            em.createQuery("DELETE FROM Review r WHERE r.product.product_id = :productId")
-              .setParameter("productId", id)
-              .executeUpdate();
-            
-            // 2. Xóa ViewHistory (nếu có)
-            try {
-                em.createQuery("DELETE FROM ViewHistory vh WHERE vh.product.product_id = :productId")
-                  .setParameter("productId", id)
-                  .executeUpdate();
-            } catch (Exception e) {
-                // Nếu bảng ViewHistory không tồn tại, b�?qua
-            }
-            
-            // 3. Xóa WishlistItem
-            em.createQuery("DELETE FROM WishlistItem wi WHERE wi.product.product_id = :productId")
-              .setParameter("productId", id)
-              .executeUpdate();
-            
-            // 4. Xóa ProductSize (có CASCADE nhưng xóa th�?công đ�?chắc chắn)
-            em.createQuery("DELETE FROM ProductSize ps WHERE ps.product.product_id = :productId")
-              .setParameter("productId", id)
-              .executeUpdate();
-            
-            // 5. Xóa file ảnh
-            UploadUtil.deleteOldImage(p.getThumbnail(), servletContext);
-            
-            // 6. Xóa Product (sau khi đã xóa các bảng con)
-            em.remove(p);
-            
-            em.getTransaction().commit();
-            
-        } catch (IllegalArgumentException e) {
-            if (em.getTransaction().isActive()) {
-                em.getTransaction().rollback();
-            }
-            throw e;
-        } catch (Exception e) {
-            if (em.getTransaction().isActive()) {
-                em.getTransaction().rollback();
-            }
-            throw new RuntimeException("Lỗi khi xóa sản phẩm: " + e.getMessage(), e);
-        } finally {
-            em.close();
+        System.out.println("[AdminProductService] Bắt đầu xóa sản phẩm ID: " + id);
+        
+        Product p = productDao.findById(id);
+        if (p == null) {
+            throw new IllegalArgumentException("Sản phẩm không tồn tại!");
         }
+        
+        // Kiểm tra sản phẩm đã có đơn hàng chưa
+        long orderCount = orderDao.countOrdersByProductId(id);
+        System.out.println("[AdminProductService] Số lượng OrderDetail: " + orderCount);
+        if (orderCount > 0) {
+            throw new IllegalArgumentException("Sản phẩm đã có đơn hàng, không thể xóa vĩnh viễn. Vui lòng dùng chức năng 'Ngừng bán'.");
+        }
+        
+        // Xóa file ảnh trước (không cần transaction)
+        System.out.println("[AdminProductService] Xóa file ảnh...");
+        UploadUtils.deleteOldImage(p.getThumbnail(), servletContext);
+        
+        // Xóa Product và tất cả các bảng con trong CÙNG MỘT TRANSACTION
+        // ProductDao sẽ xử lý tất cả: OrderDetail, Review, WishlistItem, ProductSize, ViewHistory, Product
+        System.out.println("[AdminProductService] Xóa Product và các bảng con...");
+        productDao.deleteProduct(id);
+        
+        System.out.println("[AdminProductService] Xóa sản phẩm thành công ID: " + id);
     }
     
     @Override
     public Map<String, List<?>> getFormData() {
-        EntityManager em = JpaUtil.em();
-        try {
-            List<Category> categories = em.createQuery("SELECT c FROM Category c", Category.class).getResultList();
-            
-            Map<String, List<?>> data = new HashMap<>();
-            data.put("categories", categories);
-            return data;
-        } finally {
-            em.close();
-        }
+        List<Category> categories = categoryDao.findAll();
+        
+        Map<String, List<?>> data = new HashMap<>();
+        data.put("categories", categories);
+        return data;
     }
     
     // ==================== PRIVATE HELPER METHODS ====================
     
     /**
-     * Validate d�?liệu sản phẩm
+     * Validate dữ liệu sản phẩm
      */
     private void validateProduct(Product product) {
-        if (product.getProduct_name() == null || product.getProduct_name().isBlank()) {
-            throw new IllegalArgumentException("Tên sản phẩm không được rỗng!");
+        if (product.getProduct_name() == null || product.getProduct_name().trim().isEmpty()) {
+            throw new IllegalArgumentException("Tên sản phẩm không được để trống!");
         }
-        
         if (product.getPrice() == null || product.getPrice().compareTo(BigDecimal.ZERO) < 0) {
-            throw new IllegalArgumentException("Giá sản phẩm không hợp l�?");
+            throw new IllegalArgumentException("Giá sản phẩm phải >= 0!");
         }
-        
         if (product.getCategory() == null) {
-            throw new IllegalArgumentException("Vui lòng chọn danh mục!");
+            throw new IllegalArgumentException("Danh mục không được để trống!");
         }
     }
     
     /**
-     * X�?lý upload thumbnail (ưu tiên file upload)
-     * @return Relative path mới (hoặc URL), hoặc null nếu không có thay đổi
+     * Xử lý upload ảnh thumbnail
      */
     private String handleThumbnailUpload(Product product, Part thumbnailFile, String thumbnailUrl, jakarta.servlet.ServletContext servletContext) {
         try {
             // TRƯỜNG HỢP 1: Upload file (ưu tiên)
-            String uploadedPath = UploadUtil.save(thumbnailFile, UploadType.PRODUCTS, servletContext);
+            String uploadedPath = UploadUtils.save(thumbnailFile, UploadType.PRODUCTS, servletContext);
             if (uploadedPath != null) {
-                // Xóa ảnh cũ nếu tồn tại
-                if (product.getThumbnail() != null && !product.getThumbnail().isEmpty()) {
-                    UploadUtil.deleteOldImage(product.getThumbnail(), servletContext);
+                // Xóa ảnh cũ nếu đang edit
+                if (product.getProduct_id() != null && product.getThumbnail() != null) {
+                    UploadUtils.deleteOldImage(product.getThumbnail(), servletContext);
                 }
                 return uploadedPath;
             }
             
-            // TRƯỜNG HỢP 2: URL t�?text input
-            if (thumbnailUrl != null && !thumbnailUrl.isBlank()) {
-                return thumbnailUrl;
+            // TRƯỜNG HỢP 2: URL từ text input
+            if (thumbnailUrl != null && !thumbnailUrl.trim().isEmpty()) {
+                return thumbnailUrl.trim();
             }
             
-            // TRƯỜNG HỢP 3: Gi�?nguyên ảnh cũ
+            // TRƯỜNG HỢP 3: Giữ nguyên ảnh cũ
             return null;
             
         } catch (IllegalArgumentException e) {
